--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
 *.vscode
+# Jupyter Notebook
 *.ipynb_checkpoints
+*.csv
